correct gap in desctop  menu

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,7 +4,7 @@ background: transparent;
   top: 0px;
   width: 100%;
   padding: 32px 0;
-  z-index: 999;
+  z-index: 998;
 }
 .page-header.scrolled {
   position: fixed;
@@ -56,6 +56,7 @@ background: transparent;
 @media screen and (min-width: 768px) {
   .dropdown {
   display: block;
+  justify-content: center;
 }
 .dropdown-btn {
   font-size: 16px;
@@ -65,8 +66,11 @@ background: transparent;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #fafafa;
-  padding: 10px;
+  padding: 6px;
   cursor: pointer;
+  align-items: center;
+    text-align: center;
+
 }
 
 .dropdown-content {
@@ -75,10 +79,12 @@ background: transparent;
     visibility: hidden;
     display: flex;
     flex-direction: column;
-    gap: 5px;
-    text-align: center;
+    gap: 4px;
     align-items: center;
-    padding-top: 8px;
+    text-align: center;
+
+    justify-content: center;
+  
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
